--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,10 +67,19 @@
     padding-left: 80px;
     padding-right: 50px;
     display: flex;
-    
-
-
+    transition: all 2s;
 }
+
+.nombre:hover{
+  font-size: 70px;
+  transition: all 2s;
+}
+
+
+
+
+
+
 
  nav{
     display: flex;
@@ -99,21 +108,13 @@ nav ul li a {
     padding: 20px; 
       }
 
-    ul li a:hover{
-        color: #666666
-        ;
+
+
+  ul li a:hover{
+    color: #666;
+    font-size: 35px;
+    transition: all 2s;
   }
-
-/* .icons_header{
-    color: #FFBA00;
-    float: right;
-    font-size: 20px;
-    padding: 5px 0px 0px 20px;
-    }
-
-  #shop{
-      padding-right: 10px;
-  } */
 
 
 
@@ -161,6 +162,16 @@ nav ul li a {
         border-bottom: 0.5pxdotted rgb(247, 247, 247);
     
       }
+
+
+      .hace_pedido:hover{
+        transition: all 2s;
+        font-size: 35px;
+        color: #FFBA00;
+
+      }
+
+
 
 
 
@@ -233,6 +244,14 @@ nav ul li a {
             background-color: #ffbb009f;
             float: right;
             margin-top: 160px;
+            
+          }
+
+          .contacto_index:hover{
+            -webkit-transform: scale(1.3);
+            -ms-transform: scale(1.3);
+            transform: scale(1.3);
+
           }
         
         
@@ -255,6 +274,13 @@ nav ul li a {
             float: right;
             margin-top: 50px;
         
+          }
+
+          .ubicacion:hover{
+            -webkit-transform: scale(1.3);
+            -ms-transform: scale(1.3);
+            transform: scale(1.3);
+
           }
         
         
